feat: added realtime support for v1
